--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<!--<script src="index.js"></script> -->
+<!--<script src="oop.js"></script> -->
 <script src="stopwatch.js"></script>
 </body>
 </html>
